--- a/layouts/index.html
+++ b/layouts/index.html
@@ -101,8 +101,10 @@
             </div>
             <div class="clearfix"></div>
             <a href="{{ T "home-read-more-url" | absLangURL }}"
-                class="button button-primary">{{ T "blog-read-more" }}&nbsp;<span
-                    class="icon icon-arrow-right"></span></a>
+                class="button button-primary">{{ T "blog-read-more" }}&nbsp;
+                <span
+                    class="icon icon-arrow-right">
+                </span></a>
         </section>
     </div>
 </main>
